@@ -2,6 +2,7 @@ package com.example.core.service;
 
 import com.example.core.dto.AbstractEntity;
 import com.example.core.exception.exceptions.ResourceNotFoundException;
+import com.example.core.exception.exceptions.UnsupportedMethodException;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Service;
 
@@ -24,7 +25,7 @@ public abstract class AbstractFootballService<
         E extends AbstractEntity<RD>,
         RD, SD, I,
         R extends JpaRepository<E, I>>
-        implements FootballService<RD, SD, I> {
+        implements FootballService<E, RD, SD, I> {
 
     protected final R repository;
     private Class<E> clazz;
@@ -39,17 +40,12 @@ public abstract class AbstractFootballService<
         return repository.findAll()
                 .stream()
                 .map(E::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public RD findById(I id) {
-        Optional<E> referenceById = repository.findById(id);
-        if (referenceById.isEmpty()) {
-            throw ResourceNotFoundException.build(id, clazz.getName());
-        } else {
-            return referenceById.get().toDTO();
-        }
+        return findEntityById(id).toDTO();
     }
 
     @Override
@@ -63,19 +59,19 @@ public abstract class AbstractFootballService<
         }
     }
 
-    /***
-     * left so that heirs do not have to implement unnecessary functionality
-     */
     @Override
-    public RD save(SD dto) {
-        return null;
+    public E findEntityById(I id) {
+        return repository.findById(id)
+                .orElseThrow(() -> ResourceNotFoundException.build(id, clazz.getName()));
     }
 
-    /***
-     * left so that heirs do not have to implement unnecessary functionality
-     */
+    @Override
+    public RD save(SD dto) {
+        throw UnsupportedMethodException.build("save", clazz.getName());
+    }
+
     @Override
     public RD update(I id, SD dto) {
-        return null;
+        throw UnsupportedMethodException.build("update", clazz.getName());
     }
 }
